background image not showing so i fixed it

--- a/blog.css
+++ b/blog.css
@@ -44,7 +44,7 @@ body {
   color: var(--white);
   font-size: 16px;
   min-height: 100svh;
-  background-image: url(/images/personal-blog-bkg.jpg);
+  background-image: url(images/personal-blog-bkg.jpg);
   /* background: linear-gradient(45deg, var(--black), var(--red), var(--purple), var(--blue), var(--pink)); */
  
 }
